updated boilerplate template copy

--- a/generators/function/templates/_function.scss
+++ b/generators/function/templates/_function.scss
@@ -1,6 +1,6 @@
 // <%= name %>
 //
-// Description of the <%= name %> function.
+// description of the <%= name %> function.
 //
 // Styleguide helpers.functions.<%= name %>
 @function <%= name %>() {
