--- a/generators/mixin/templates/_mixin.scss
+++ b/generators/mixin/templates/_mixin.scss
@@ -1,6 +1,6 @@
 // <%= name %>
 //
-// Description of the <%= name %> mixin.
+// description of the <%= name %> mixin.
 //
 // Styleguide helpers.mixins.<%= name %>
 @mixin <%= name %>() {
