separate the documenation examples into their own template (modules)

--- a/generators/module/templates/_base.scss
+++ b/generators/module/templates/_base.scss
@@ -4,9 +4,6 @@
 //
 // .<%= name %> - base <%= name %> class.
 //
-// Markup:
-// <div class="<%= name %> {{modifier_class}}">
-//   <%= name %> content.
-// </div>
+// Markup: templates/example.hbs
 //
 // Styleguide modules.<%= name %>
