--- a/generators/module/templates/_theme.scss
+++ b/generators/module/templates/_theme.scss
@@ -4,9 +4,6 @@
 //
 // .<%= name %>-t-* - theme class description.
 //
-// Markup:
-// <div class="<%= name %> {{modifier_class}}">
-//   <%= name %> content.
-// </div>
+// Markup: templates/example.hbs
 //
 // Styleguide modules.<%= name %>.theme
