separate the documenation examples into their own template (units)

--- a/generators/unit/templates/_unit.scss
+++ b/generators/unit/templates/_unit.scss
@@ -2,9 +2,6 @@
 //
 // classes for the <%= name %> unit.
 //
-// Markup:
-// <div class="<%= name %>">
-//   <%= name %> content.
-// </div>
+// Markup: templates/example.hbs
 //
 // Styleguide units.<%= name %>
