added fixture scaffolding to modules

--- a/generators/module/templates/_base.scss
+++ b/generators/module/templates/_base.scss
@@ -2,8 +2,6 @@
 //
 // base classes for the <%= name %> module.
 //
-// .<%= name %> - base <%= name %> class.
-//
-// Markup: templates/example.hbs
+// Markup: tests/fixtures/<%= name %>.hbs
 //
 // Styleguide modules.<%= name %>
