--- a/generators/module/templates/_layout.scss
+++ b/generators/module/templates/_layout.scss
@@ -2,8 +2,6 @@
 //
 // layout classes for the <%= name %> module.
 //
-// .<%= name %>-l-* - layout class description.
-//
-// Markup: templates/example.hbs
+// Markup: tests/fixtures/<%= name %>.hbs
 //
 // Styleguide modules.<%= name %>.layout
