--- a/generators/module/templates/_state.scss
+++ b/generators/module/templates/_state.scss
@@ -2,8 +2,6 @@
 //
 // state classes for the <%= name %> module.
 //
-// .<%= name %>-s-* - state class description.
-//
-// Markup: templates/example.hbs
+// Markup: tests/fixtures/<%= name %>.hbs
 //
 // Styleguide modules.<%= name %>.state
