--- a/generators/module/templates/_theme.scss
+++ b/generators/module/templates/_theme.scss
@@ -2,8 +2,6 @@
 //
 // theme classes for the <%= name %> module.
 //
-// .<%= name %>-t-* - theme class description.
-//
-// Markup: templates/example.hbs
+// Markup: tests/fixtures/<%= name %>.hbs
 //
 // Styleguide modules.<%= name %>.theme
