--- a/generators/module/templates/_modifier.scss
+++ b/generators/module/templates/_modifier.scss
@@ -2,8 +2,6 @@
 //
 // modifier classes for the <%= name %> module.
 //
-// .<%= name %>-m-* - modifier class description.
-//
-// Markup: templates/example.hbs
+// Markup: tests/fixtures/<%= name %>.hbs
 //
 // Styleguide modules.<%= name %>.modifier
