added fixture scaffolding to units

--- a/generators/unit/templates/_unit.scss
+++ b/generators/unit/templates/_unit.scss
@@ -2,6 +2,6 @@
 //
 // classes for the <%= name %> unit.
 //
-// Markup: templates/example.hbs
+// Markup: tests/fixtures/<%= name %>.hbs
 //
 // Styleguide units.<%= name %>
