added fixture scaffolding to layouts

--- a/generators/layout/templates/_layout.scss
+++ b/generators/layout/templates/_layout.scss
@@ -2,8 +2,6 @@
 //
 // <%= name %> layout classes.
 //
-// .l-<%= name %>-* - layout class description.
-//
-// Markup: templates/example.hbs
+// Markup: tests/fixtures/<%= name %>.hbs
 //
 // Styleguide layouts.<%= name %>
