Updates local configs into different files, like global configs

--- a/generators/page/templates/_index.scss
+++ b/generators/page/templates/_index.scss
@@ -5,4 +5,8 @@
 // Markup: tests/fixtures/<%= name %>.hbs
 //
 // Styleguide pages.<%= name %>
-@import "config";
+@import "config/colors";
+@import "config/icons";
+@import "config/images";
+@import "config/layouts";
+@import "config/typography";
