--- a/generators/module/templates/_index.scss
+++ b/generators/module/templates/_index.scss
@@ -1,5 +1,9 @@
 // <%= name %> Module
-@import "config";
+@import "config/colors";
+@import "config/icons";
+@import "config/images";
+@import "config/layouts";
+@import "config/typography";
 
 @import "partials/base";
 @import "partials/layout";
