--- a/generators/unit/templates/_index.scss
+++ b/generators/unit/templates/_index.scss
@@ -5,4 +5,8 @@
 // Markup: tests/fixtures/<%= name %>.hbs
 //
 // Styleguide units.<%= name %>
-@import "config";
+@import "config/colors";
+@import "config/icons";
+@import "config/images";
+@import "config/layouts";
+@import "config/typography";
